test/syntaxerrors/TestMissingRParen2.jdc
println("Please key in a word:");
String s1 = readLine();
println("please key in another word:");
String s2 = readLine(;
println("You entered: " + s1 + s2;
